@@ -1,0 +1,8 @@
+prefix=@prefix@
+assemblies_dir=${prefix}/lib/Mono.Cecil
+Libraries=${assemblies_dir}/Mono.Cecil.dll
+
+Name: Mono.Cecil
+Description: Mono.Cecil Library
+Version: 0.1
+Libs: -r:Mono.Cecil.dll
